--- a/package.json
+++ b/package.json
@@ -48,5 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "formik": "^2.2.9",
+    "yup": "^0.32.11"
   }
 }
